# Password_Manageris

./: .gitignore  CMakeLists.txt  README.md  add_dialog.cpp  add_dialog.h  app.rc  dialog_add.cpp  dialog_add.h  dialog_add.ui  dialog_change.ui  dialog_client_site.cpp  dialog_client_site.h  dialog_client_site.ui  dialog_generator.cpp  dialog_generator.h  dialog_generator.ui  dialog_server.cpp  dialog_server.h  dialog_server.ui  encryptindialog.cpp  encryptindialog.h  encryptindialog.ui  login_page.cpp  login_page.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managerwindow.cpp  managerwindow.h  managerwindow.ui  photo_exe.qrc  pictures.qrc  registerwindow.cpp  registerwindow.h  registerwindow.ui
Video/: YouTube.txt
builds-sqldrivers/: qsqlmysql.debug
crt/: Table_export.json  Table_manual_export.json  client-cert.pem  client-key.pem  export.json  server-cert.pem  server-key.pem
libs/: client-cert.pem  client-key.pem
libs/docker/: Dockerfile  docker-compose.yml  init.sql
libs/p2p/: Table_export.csv  Table_json.json  client.crt  client.csr  clientkey.key  privatekey.key  received_file.csv  received_file.rar  server-cert.pem  server-key.pem  server.crt  server.csr
libs/qotp-main/libqotp/qotp_build/.qt/: QtDeploySupport.cmake
libs/qotp-main/libqotp/qotp_build/tests/test_hotp_autogen/: deps
libs/qotp-main/libqotp/qotp_build/tests/test_totp_autogen/: deps
sqldrivers/: qsqlodbc.debug
